Fix MySQL 5.7 support

This implements support for various versions of Oracle MySQL and MariaDB,
adding a special case for MySQL >= 5.7.4 (which removed --force command
line option) and MySQL >= 5.7.6 (which deprecated mysql_db_install and
recommends mysqld --initialize instead)

Also improves debug output during initialization.

BUG: 361485
FIXED-IN: 16.04.2